--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.main.banner-mode=off
 spring.datasource.url=jdbc:h2:mem:h2_store
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=dubugging
